# vlm-probe-suite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
configs/: coco_subset.json  main_sweep.yaml  resolution_sweep.yaml
data/: CANTONESE_CC.md
data/cantonese_cc/: LICENSE  README.md  captions.jsonl
scripts/: README.md  get_coco_subset.py  reproduce_table2.sh  reproduce_table3.sh
src/finevlm_probe/: __init__.py
src/finevlm_probe/datasets/: base.py  coco_subset.py
src/finevlm_probe/models/: __init__.py  base.py  blip2_adapter.py  clip_adapter.py  llava_adapter.py  siglip_adapter.py
src/finevlm_probe/probes/: __init__.py  attr_swap.py  base.py  cantonese_cap.py  count_coarse.py
src/finevlm_probe/reporting/: aggregate.py
src/finevlm_probe/runners/: run_one.py  sweep.py
tests/: test_aggregate.py  test_models_registry.py  test_probes.py
